--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "noImplicitAny": true,
     "strictNullChecks": true
   },
-  "include": ["src", "fonts.d.ts"]
+  "include": ["src", "fonts.d.ts", "**/*.tsx"]
 }
