build 폴더 위치 확인 커맨드 입력

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,10 @@ jobs:
 
       - name: Build
         run: npm run build
+        working-directory: .
+
+      - name: List Project Directory Contents
+        run: ls -la
 
   deploy:
     needs: build
@@ -38,11 +42,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
 
-      - name: List Build Directory Contents
-        run: ls -la build
-
       - name: Deploy to S3
         run: aws s3 sync ./build s3://${{ secrets.AWS_S3_BUCKET }} --delete
+        working-directory: .
 
       - name: Invalidate CloudFront Distribution
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID}} --paths "/*"
