--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,9 +25,6 @@ jobs:
         run: npm run build
         working-directory: .
 
-      - name: List Project Directory Contents
-        run: ls -la
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -42,8 +39,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
 
+      - name: List Project Directory Contents
+        run: ls -la
+        working-directory: .
+
       - name: Deploy to S3
-        run: aws s3 sync ./build s3://${{ secrets.AWS_S3_BUCKET }} --delete
+        run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET }} --delete
         working-directory: .
 
       - name: Invalidate CloudFront Distribution
